--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "MIT"
 python = "^3.7"
 python-telegram-bot = "^13.13"
 dataset = "^1.1"
+Babel = "^2.10.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.971"
